--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="body">
     <header class="header">
-      <img class="header-img" src="./eisenhower-matrix.jpg">
+      <img class="header-img" src="./eisenhower-matrix.jpg" alt="the eisenhower matrix image">
       <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
@@ -27,7 +27,7 @@
             <input type="text" class="input task-input">
             <button class="button edit-task">Edit</button>
             <button class="button delete-task">
-              <img class="delete-task-icon" src="./remove.svg">
+              <img class="delete-task-icon" src="./remove.svg" alt="delete icon">
             </button>
           </li>
           <li class="list-item edit-mode">
@@ -36,7 +36,7 @@
             <input type="text" value="Go Shopping" class="input task-input">
             <button class="button edit-task">Save</button>
             <button class="button delete-task">
-              <img class="delete-task-icon" src="./remove.svg">
+              <img class="delete-task-icon" src="./remove.svg" alt="delete icon">
             </button>
           </li>
         </ul>
@@ -50,7 +50,7 @@
             <input type="text" class="input task-input">
             <button class="button edit-task">Edit</button>
             <button class="button delete-task">
-              <img class="delete-task-icon" src="./remove.svg">
+              <img class="delete-task-icon" src="./remove.svg" alt="delete icon">
             </button>
           </li>
         </ul>
