--- a/index.html
+++ b/index.html
@@ -7,50 +7,50 @@
   </head>
   <body class="body">
     <header class="header">
-      <img class="header-img" src="./eisenhower-matrix.jpg" alt="the eisenhower matrix image">
-      <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="the eisenhower matrix image">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
     <main class="main">
-      <section id="add-task">
-        <label class="label-input" for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="input task-input" type="text">
-          <button class="button">Add</button>
+      <section class="add-task" id="add-task">
+        <label class="add-task__input-label" for="new-task">Add Item</label>
+        <div class="add-task__row-wrapper">
+          <input id="new-task"class="text-input" type="text">
+          <button class="button add-task__button">Add</button>
         </div>
       </section>
       <section>
         <h3 class="title">Todo</h3>
         <ul class="list" id="incomplete-tasks">
           <li class="list-item">
-            <input class="input" type="checkbox">
-            <label class="input task-input label-input">Pay Bills</label>
-            <input type="text" class="input task-input">
-            <button class="button edit-task">Edit</button>
-            <button class="button delete-task">
-              <img class="delete-task-icon" src="./remove.svg" alt="delete icon">
+            <input class="checkbox-input" type="checkbox">
+            <label class="list-item__input-label">Pay Bills</label>
+            <input type="text" class="text-input">
+            <button class="button list-item__edit-task-btn">Edit</button>
+            <button class="button list-item__delete-task-btn">
+              <img class="list-item__delete-icon" src="./remove.svg" alt="delete icon">
             </button>
           </li>
-          <li class="list-item edit-mode">
-            <input class="input" type="checkbox">
-            <label class="input task-input label-input">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="input task-input">
-            <button class="button edit-task">Save</button>
-            <button class="button delete-task">
-              <img class="delete-task-icon" src="./remove.svg" alt="delete icon">
+          <li class="list-item list-item--edit-mode">
+            <input class="checkbox-input" type="checkbox">
+            <label class="list-item__input-label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="text-input">
+            <button class="button list-item__edit-task-btn">Save</button>
+            <button class="button list-item__delete-task-btn">
+              <img class="list-item__delete-icon" src="./remove.svg" alt="delete icon">
             </button>
           </li>
         </ul>
       </section>
       <section>
         <h3 class="title">Completed</h3>
-        <ul class="list" id="completed-tasks">
+        <ul class="list list--completed-tasks" id="completed-tasks">
           <li class="list-item">
-            <input class="input" type="checkbox" checked>
-            <label class="task-input label-input">See the Doctor</label>
-            <input type="text" class="input task-input">
-            <button class="button edit-task">Edit</button>
-            <button class="button delete-task">
-              <img class="delete-task-icon" src="./remove.svg" alt="delete icon">
+            <input class="checkbox-input" type="checkbox" checked>
+            <label class="list-item__input-label">See the Doctor</label>
+            <input type="text" class="text-input">
+            <button class="button list-item__edit-task-btn">Edit</button>
+            <button class="button list-item__delete-task-btn">
+              <img class="list-item__delete-icon" src="./remove.svg" alt="delete icon">
             </button>
           </li>
         </ul>
